# topology-checker

./: .gitignore  Cargo.toml  README.md
scripts/: build.py  topology_checker.py  topology_checker.spec
src/: algorithm.rs  lib.rs  main.rs  prelude.rs  rule.rs  rules.rs  util.rs  utils.rs
src/algorithm/: merge_lines.rs  merge_lines_optimized.rs
src/rule/: must_be_inside.rs  must_be_outside.rs  must_not_be_multipart.rs  must_not_have_dangles.rs  must_not_have_gaps.rs  must_not_intersect.rs  must_not_overlap.rs
src/rules/: must_not_have_dangles.rs  must_not_intersect.rs  must_not_overlap.rs  there_are_no_dangles.rs  there_are_no_dangles_improved.rs
src/util/: geometry.rs  io.rs
src/utils/: geometry.rs  io.rs
