[package]
name = "topology-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = "0.16.0"
geo = "0.28.0"
geo-types = {version="0.7.13", features=["use-rstar_0_12", "serde"]}
rayon = "1.10.0"