[package]
name = "topology-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geozero = { version = "=0.11.0", features = ["with-gdal"] }
gdal = "0.16.0"
geo = "0.28.0"
geo-types = { version = "0.7.13", features = ["use-rstar_0_12"] }
rayon = "1.10.0"
gdal-sys = "0.9.1"
itertools = "0.12.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
strum = "0.26.2"
strum_macros = "0.26.2"
